--- a/share/mozilla-planet.css
+++ b/share/mozilla-planet.css
@@ -69,6 +69,7 @@ body {
 	border-style: solid; 
 	padding:8pt; 
 	margin:8pt; 
+	overflow: auto;
 }
 
 dd { 
